--- a/src/components/Transition/Transition.module.scss
+++ b/src/components/Transition/Transition.module.scss
@@ -1,6 +1,6 @@
 @import "../variables.scss";
 .transition {
-  background: linear-gradient(360deg, #00FFF5 -48.05%, #2390BC -40.37%, #3459A0 -23.78%, #384C9A -14.08%, #422B89 -0.4%, #3A0F5F 17.72%, #37054F 28.09%, #240333 51.22%, #000000 130.81%);
+  background: black;
   position: fixed;
   top: 0;
   left: 0;
