--- a/src/components/variables.scss
+++ b/src/components/variables.scss
@@ -1,6 +1,6 @@
 //general variables for colors and fonts
 $BackgroundColor:linear-gradient(307.04deg, #F12929 -13.77%, #B0202F -9.4%, #861B33 -6.66%, #5A1537 5.69%, #2D0F3C 23.36%, #0F0B3F 35.72%, #0B082F 49.06%, #000000 112.03%);
-$EmphasizeColor: #00FFF5;
+$EmphasizeColor: #009AFF;
 $PrimaryColor: #F2F4F7;
 $PrimaryFont: 'Lato',sans-serif;
 $mobileBackgorund: linear-gradient(360deg, #F12929 -31.02%, #B0202F -26.47%, #861B33 -23.62%, #5A1537 -10.75%, #2D0F3C 7.66%, #0F0B3F 20.53%, #0B082F 34.42%, #000000 100%);
@@ -26,3 +26,4 @@ $ImageWidthHeightHDhome:380px;
 $h1FontSizeFHD:40px;
 $h3FontSizeHD:40px;
 $pFontSizeFHD:20px;
+
