--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -1,237 +1,174 @@
 @import "../variables.scss";
 
 
-.presentation {
-  padding-top: 120px;
-  .leftPresentation {
-    //animations for letters
-    .letters {
-      font-family: $PrimaryFont;
-      font-size: $h1FontSizeFHDhome;
-      color: $PrimaryColor;
-      display: flex;
-      flex-direction: row;
-      text-decoration: none;
-      padding: 40px;
-      list-style-type: none;
-      transition: 0.5s;
-      padding-left: $PaddingLeftRight;
-      //animation for individual letters
-      #w {
-        transition: 0.6s;
-      }
-      #e1 {
-        transition: 0.6s;
-      }
-      #i {
-        transition: 0.6s;
-      }
-      #s1 {
-        transition: 0.6s;
-      }
-      #s2 {
-        transition: 0.6s;
-      }
-      #d {
-        transition: 0.6s;
-      }
-      #o {
-        transition: 0.6s;
-      }
-      #t {
-        transition: 0.6s;
-      }
-      #e2 {
-        transition: 0.6s;
-      }
-      #x {
-        transition: 0.6s;
-      }
-      #e3 {
-        transition: 0.6s;
-      }
-      #w:hover {
-        transition: 0.3s;
-        transform: translateY(-18px);
-        color: $EmphasizeColor;
-      }
-      #e1:hover {
-        transition: 0.3s;
-        transform: translateY(-18px);
-        color: $EmphasizeColor;
-      }
-      #i:hover {
-        transition: 0.3s;
-        transform: translateY(-18px);
-        color: $EmphasizeColor;
-      }
-      #s1:hover {
-        transition: 0.3s;
-        transform: translateY(-18px);
-        color: $EmphasizeColor;
-      }
-      #s2:hover {
-        transition: 0.3s;
-        transform: translateY(-18px);
-        color: $EmphasizeColor;
-      }
-      #d:hover {
-        transition: 0.3s;
-        transform: translateY(-18px);
-        color: $EmphasizeColor;
-      }
-      #o:hover {
-        transition: 0.3s;
-        transform: translateY(-18px);
-        color: $EmphasizeColor;
-      }
-      #t:hover {
-        transition: 0.3s;
-        transform: translateY(-18px);
-        color: $EmphasizeColor;
-      }
-      #e2:hover {
-        transition: 0.3s;
-        transform: translateY(-18px);
-        color: $EmphasizeColor;
-      }
-      #x:hover {
-        transition: 0.3s;
-        transform: translateY(-18px);
-        color: $EmphasizeColor;
-      }
-      #e3:hover {
-        transition: 0.3s;
-        transform: translateY(-18px);
-        color: $EmphasizeColor;
-      }
-    }
-    .jobs {
-      display: flex;
-      flex-direction: row;
-      padding: $PaddingLeftRight;
-      position: relative;
-      bottom: 50px;
-      #job1 {
-        font-family: $PrimaryFont;
-        font-size: $h3FontSizeFHDhome;
-        color: $EmphasizeColor;
-      }
-      #job2 {
-        font-family: $PrimaryFont;
-        font-size: $h3FontSizeFHDhome;
-        color: grey;
-      }
-    }
+.home{
+  display: flex;
+  flex-direction: row;
+  #titlePhone{
+    position: absolute;
+    opacity: 0;
   }
-  #contactBtn {
-    cursor:pointer;
+  #navbarLogo{
+    width: 120px;
+    height: 160px;
+    position: absolute;
+    bottom: 90%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    object-fit: cover;
+  }
+  .blankSpace{
+    width: 80px;
+    height: 100vh;
     background-color: transparent;
-    color: $EmphasizeColor;
-    border: 4px solid $EmphasizeColor;
-    font-family: $PrimaryFont;
-    font-weight: bolder;
-    font-size: 50px;
-    border-radius: 15px;
-    padding: 10px;
-    margin: $PaddingLeftRight;
-    position: relative;
-    bottom: 80px;
-    transition: 0.3s;
+    z-index: 3;
+    position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
   }
-  #contactBtn:hover {
-    transition: 0.3s;
+  .leftSide{
+    width: 50%;
+    height: 100vh;
     background-color: black;
-    color: $BackgroundColor;
-  }
-  .rightPresentation {
-    #image {
+    #aboutTxt{
+      transition: 0.4s;
       position: absolute;
-      right: 57px;
-      top: 250px;
-      width: $ImageWidthHeightFHDhome;
-      height: $ImageWidthHeightFHDhome;
-      -webkit-transform: scaleX(-1);
-      transform: scaleX(-1);
+      left: 0;
+      top:45%;
+      transform: rotate(270deg);
+      color: $PrimaryColor;
+      font-size: 45px;
+    }
+    #leftImage{
+      transition: 0.4s;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 15rem;
+      height: 18rem;
+      object-fit:cover;
+      margin-left: -7.53rem;
+      border-radius: 100% 0% 0% 100%;
+      filter: brightness(85%);
+    }
+  }
+  .rightSide{
+    width: 50%;
+    height: 100vh;
+    background-color: $PrimaryColor;
+    #portofolioTxt{
+      transition: 0.4s;
+      position: absolute;
+      right: 0;
+      top:45%;
+      transform: rotate(90deg);
+      color: black;
+      font-size: 45px;
+    }
+    #rightImage{
+      transition: 0.4s;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 15rem;
+      height: 18rem;
+      margin-left: 7.5rem;
+      object-fit:cover;
+      border-radius: 0% 100% 100% 0%;
+      filter: brightness(85%);
+    }
+  }
+
+  //hover effects
+  .leftSide:hover{
+    #aboutTxt{
+      transition: 0.4s;
+      margin-left: 30px;
+      color: $EmphasizeColor;
+    }
+    #leftImage{
+      transition: 0.4s;
+      width: 23rem;
+      margin-left: -11.5rem;
+      border-radius: 30% 0% 0% 30%;
+      filter: brightness(110%);
+    }
+  }
+  .rightSide:hover{
+    #portofolioTxt{
+      transition: 0.4s;
+      margin-right:30px;
+      color: $EmphasizeColor;
+    }
+    #rightImage{
+      transition: 0.4s;
+      width: 23rem;
+      margin-left: 11.5rem;
+      border-radius: 0% 30% 30% 0%;
+      filter: brightness(110%);
     }
   }
 }
 
-@media only screen and (max-width: 1367px) {
-  .presentation{
-    border: 0;
-    margin: 0;
-    margin-top: 30px;
-    .leftPresentation{
-      .letters{
-        font-size:$h1FontSizeHDhome;
-        padding-top: 0;
+//media for 1080p and higher
+@media only screen and(min-width:1400px){
+  .home{
+    .leftSide{
+      #leftImage{
+        height: 28rem;
       }
-      .jobs{
-        padding-top: 40px;
-        padding-bottom: 80px;
-        #job1{
-          font-size: $h3FontSizeHDhome;
-        }
-        #job2{
-          font-size: $h3FontSizeHDhome;
-        }
-      }
-    }
-    #contactBtn{
-      margin-top: 20px;
-      font-size: 30px;
-      margin-bottom: 0;
-    }
-    .rightPresentation{
-      padding: 0;
-      #image{
-        top:125px;
-        width: $ImageWidthHeightHDhome;
-        height: $ImageWidthHeightHDhome;
+    }.rightSide{
+      #rightImage{
+        height: 28rem;
       }
     }
   }
 }
-@media only screen and (max-width:600px){
-  .presentation{
-    max-width: 100%;
-    .leftPresentation{
-      margin: auto;
-      margin-top: -17px;
-      .letters{
-        font-size: 55px;
-        display: flex;
-        justify-content: center;
-        margin:0;
-        padding: 0;
+
+@media only screen and(max-width:600px){
+  .home{
+    #titlePhone{
+      position: absolute;
+      z-index: 4;
+      color: $PrimaryColor;
+    }
+    .leftSide{
+      width: 50%;
+      #aboutTxt{
+        font-size: 32px;
+        z-index: 3;
+        transform: rotate(0deg);
+        margin-top: 10rem;
+        padding-left: 15px;
       }
-      .jobs{
-        margin-top: 30px;
-        #job1{
-          font-size: 23px;
-        }
-        #job2{
-          font-size:23px;
-        }
-      }
-      #contactBtn{
-        position: absolute;
-        bottom: 0%;
-        margin:0px 0px 60px 0px;
-        padding: 8px;
-        width: 100%;
+      #leftImage{
+        height: 15rem;
+        width: 11rem;
+        margin: 0;
+        margin-left: -5rem;
+        filter: brightness(65%);
       }
     }
-    .rightPresentation{
-      position: relative;
-      margin-top: 20px;
-      #image{
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 67%;
+    .rightSide{
+      background-color: black;
+      width: 50%;
+      margin: 0;
+      #portofolioTxt{
+        color: $PrimaryColor;
+        font-size:32px;
+        z-index: 3;
+        transform: rotate(0deg);
+        margin-top: 10rem;
+        padding-right: 15px;
+      }
+      #rightImage{
+        margin-left:5.4rem;
+        height: 15rem;
+        width: 11rem;
+        filter: brightness(70%);
       }
     }
   }
