--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,7 +1,4 @@
 .navbar {
-  background: #00fff5;
-  background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 255, 245, 0)), to(#010101));
-  background: linear-gradient(0deg, rgba(0, 255, 245, 0) 0%, #010101 100%);
   width: 100%;
   height: 120px;
   position: fixed;
@@ -33,7 +30,7 @@
 
 .navbar .links1 {
   text-decoration: none;
-  color: #00FFF5;
+  color: #009AFF;
   font-family: "Lato", sans-serif;
   padding: 0px 60px 0px 45px;
   font-weight: bold;
@@ -54,11 +51,14 @@
 @media only screen and (max-width: 1367px) {
   .navbar #navbarLogo {
     padding: 0px 0px 0px 85px;
-    width: 150px;
-    height: 140px;
+    width: 130px;
+    height: 120px;
+  }
+  .navbar .links {
+    top: 30px;
   }
   .navbar .links1 {
-    font-size: 25px;
+    font-size: 20px;
   }
   .navbar .links1:hover {
     padding: 10px 45px 20px 45px;
@@ -73,7 +73,7 @@
     display: block;
     font-size: 30px;
     margin: 50px 35px 0px 0px;
-    color: #00FFF5;
+    color: #009AFF;
   }
   .navbar .links {
     display: none;
