--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,11 +1,5 @@
 @import "../variables.scss";
 .navbar {
-  background: rgb(0, 255, 245);
-  background: linear-gradient(
-    0deg,
-    rgba(0, 255, 245, 0) 0%,
-    rgba(1, 1, 1, 1) 100%
-  );
   width: 100%;
   height: 120px;
   position: fixed;
@@ -53,11 +47,15 @@
   .navbar {
     #navbarLogo {
       padding: 0px 0px 0px 85px;
-      width: 150px;
-      height: 140px;
+      width: 130px;
+      height: 120px;
+    }
+    .links{
+      top:30px;
     }
     .links1 {
-      font-size: 25px;
+      font-size: 20px;
+      
     }
     .links1:hover {
       padding: 10px 45px 20px 45px;
