--- a/src/components/Transition/Transition.module.css
+++ b/src/components/Transition/Transition.module.css
@@ -1,6 +1,5 @@
 .transition {
-  background: -webkit-gradient(linear, left bottom, left top, color-stop(-48.05%, #00FFF5), color-stop(-40.37%, #2390BC), color-stop(-23.78%, #3459A0), color-stop(-14.08%, #384C9A), color-stop(-0.4%, #422B89), color-stop(17.72%, #3A0F5F), color-stop(28.09%, #37054F), color-stop(51.22%, #240333), color-stop(130.81%, #000000));
-  background: linear-gradient(360deg, #00FFF5 -48.05%, #2390BC -40.37%, #3459A0 -23.78%, #384C9A -14.08%, #422B89 -0.4%, #3A0F5F 17.72%, #37054F 28.09%, #240333 51.22%, #000000 130.81%);
+  background: black;
   position: fixed;
   top: 0;
   left: 0;
@@ -32,7 +31,7 @@
 
 .transition #loadingBarFront {
   border-radius: 10px;
-  background-color: #00FFF5;
+  background-color: #009AFF;
   position: absolute;
   top: 70%;
   left: 50%;
