--- a/src/components/About/Skills.module.scss
+++ b/src/components/About/Skills.module.scss
@@ -1,18 +1,37 @@
 @import "../variables.scss";
-.skillsList {
-  margin: 0;
+
+.skill_card{
+  width: 100%;
+  position: relative;
+  left: 50%;
+  top:-15%;
   display: flex;
+  #skills_txt{
+    padding: 30px 0px 10px 0px;
+  }
+  p{
+    font-family: $PrimaryFont;
+    font-weight: bold;
+    padding: 18px;
+    font-size: 20px;
+  }
+  i{
+    font-size: 40px;
+    padding-bottom: 20px;
+  }
 }
 
-@media only screen and(max-width:600px) {
-    .skills{
-        overflow: auto;
-        ::-webkit-scrollbar{
-            opacity: 0;
-        }
-        .skillsList{
-            display: flex;
-            margin-left: 40px;
-        }
-    }
+@media only screen and(max-width:1367px){
+ .skill_card{
+   #skills_txt{
+     font-size: 25px;
+     padding: 20px 0px 10px 0px;
+   }
+   p{
+     font-size:18px;
+   }
+   i{
+     font-size: 30px;
+   }
+ }
 }
