--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -52,6 +52,8 @@
       margin-left: -7.53rem;
       border-radius: 100% 0% 0% 100%;
       filter: brightness(85%);
+      -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+      filter: grayscale(60%);
     }
   }
   .rightSide{
@@ -79,6 +81,8 @@
       object-fit:cover;
       border-radius: 0% 100% 100% 0%;
       filter: brightness(85%);
+      -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(80%);
     }
   }
 
@@ -88,6 +92,7 @@
       transition: 0.4s;
       margin-left: 30px;
       color: $EmphasizeColor;
+      font-size: $h1FontSize_1FHD;
     }
     #leftImage{
       transition: 0.4s;
@@ -95,6 +100,8 @@
       margin-left: -11.5rem;
       border-radius: 30% 0% 0% 30%;
       filter: brightness(110%);
+      -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
+      filter: grayscale(0%);
     }
   }
   .rightSide:hover{
@@ -102,6 +109,7 @@
       transition: 0.4s;
       margin-right:30px;
       color: $EmphasizeColor;
+      font-size: $h1FontSize_1FHD;
     }
     #rightImage{
       transition: 0.4s;
@@ -109,6 +117,8 @@
       margin-left: 11.5rem;
       border-radius: 0% 30% 30% 0%;
       filter: brightness(110%);
+      -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
+      filter: grayscale(0%);
     }
   }
 }
@@ -119,10 +129,14 @@
     .leftSide{
       #leftImage{
         height: 28rem;
+        width: 20rem;
+        margin-left: -10rem;
       }
     }.rightSide{
       #rightImage{
+        margin-left: 10rem;
         height: 28rem;
+        width: 20rem;
       }
     }
   }
