--- a/src/components/Transition/Transition.module.css
+++ b/src/components/Transition/Transition.module.css
@@ -25,8 +25,8 @@
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 500px;
-  height: 20px;
+  width: 35%;
+  height: 15px;
 }
 
 .transition #loadingBarFront {
@@ -38,6 +38,6 @@
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   width: 0px;
-  height: 20px;
+  height: 15px;
 }
 /*# sourceMappingURL=Transition.module.css.map */
