--- a/src/components/Transition/Transition.module.scss
+++ b/src/components/Transition/Transition.module.scss
@@ -21,8 +21,8 @@
     top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 500px;
-    height: 20px; 
+    width: 35%;
+    height: 15px; 
   }
   #loadingBarFront{
     border-radius: 10px;
@@ -32,7 +32,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 0px;
-    height: 20px; 
+    height: 15px; 
   }
 }
 
