--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -85,7 +85,7 @@ body {
   position: relative;
   top: 40%;
   color: #F2F4F7;
-  font-size: 55px;
+  font-size: 50px;
   padding: 0px 8% 0px 8%;
 }
 
@@ -93,7 +93,7 @@ body {
   position: relative;
   top: 45%;
   color: #009AFF;
-  font-size: 40px;
+  font-size: 35px;
   padding: 0px 8% 0px 8%;
 }
 
@@ -132,7 +132,7 @@ body {
   color: black;
   width: 55%;
   padding: 0px 8% 0px 8%;
-  font-size: 40px;
+  font-size: 35px;
 }
 
 .about .studies #studies_txt2 {
@@ -143,7 +143,7 @@ body {
   color: black;
   width: 55%;
   padding: 0px 8% 0px 8%;
-  font-size: 40px;
+  font-size: 35px;
 }
 
 .about .studies img {
@@ -184,7 +184,7 @@ body {
   padding: 0px 8% 0px 8%;
   top: 13%;
   color: #F2F4F7;
-  font-size: 55px;
+  font-size: 50px;
   width: 50%;
   z-index: 1;
 }
@@ -195,7 +195,7 @@ body {
   padding: 0px 8% 0px 8%;
   bottom: 13%;
   color: #F2F4F7;
-  font-size: 55px;
+  font-size: 50px;
   width: 50%;
   z-index: 1;
 }
@@ -227,7 +227,7 @@ body {
   width: 40%;
   height: 100%;
   top: 25%;
-  font-size: 55px;
+  font-size: 50px;
   padding: 0px 8% 0px 8%;
   margin-left: 7%;
 }
@@ -256,26 +256,27 @@ body {
 .about .languages {
   margin-top: 3%;
   max-width: 100%;
-  height: 30vh;
+  height: 50vh;
   color: #F2F4F7;
   padding: 0px 8% 0px 8%;
 }
 
 .about .languages h1 {
-  font-size: 55px;
+  font-size: 50px;
   color: #009AFF;
   margin-bottom: 20px;
 }
 
 .about .languages .languages_txt {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
 }
 
 .about .languages .languages_txt p {
   padding: 20px 40px 0px 0px;
-  font-size: 40px;
+  font-size: 35px;
 }
 
 @media only screen and (max-width: 1367px) {
@@ -319,10 +320,166 @@ body {
     height: 70vh;
   }
   .about .languages h1 {
-    font-size: 40px;
+    font-size: 35px;
   }
   .about .languages .languages_txt p {
     font-size: 30px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .about .intro #intro_txt {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    font-size: 50px;
+    width: 100%;
+  }
+  .about .intro .intro_btn {
+    width: 100%;
+    left: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    margin: auto;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .about .presentation #first_txt {
+    z-index: 2;
+    text-shadow: 2px 2px 4px #000000;
+  }
+  .about .studies {
+    height: 100vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+  }
+  .about .studies #studies_txt {
+    position: relative;
+    width: 80%;
+    font-size: 28px;
+    z-index: 1;
+  }
+  .about .studies #studies_txt2 {
+    width: 80%;
+    font-size: 28px;
+    z-index: 1;
+    bottom: -3%;
+  }
+  .about .studies img {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    height: 28%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 0px;
+  }
+  .about .learning #learning_txt1 {
+    top: 9%;
+    font-size: 28px;
+  }
+  .about .learning #learning_txt2 {
+    bottom: 10%;
+    font-size: 28px;
+  }
+  .about .so_now {
+    height: 65vh;
+  }
+  .about .so_now .so_now_txt {
+    top: 0;
+    width: 100%;
+  }
+  .about .so_now .so_now_txt #left_line {
+    height: 200px;
+    width: 10px;
+  }
+  .about .so_now .so_now_txt h1 {
+    width: 65%;
+    top: 23%;
+    font-size: 28px;
+    margin-left: 70px;
+  }
+  .about .so_now iframe {
+    overflow: hidden;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 0px;
+    bottom: -10%;
+  }
+  .about .skills {
+    width: 100%;
+    height: 100vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    background: black;
+  }
+  .about .languages {
+    height: 45vh;
+    text-align: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .about .languages .languages_txt {
+    font-family: "Lato", sans-serif;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    font-size: 28px;
+  }
+  .about .languages .languages_txt #lng {
+    color: #009AFF;
   }
 }
 /*# sourceMappingURL=About.module.css.map */
