--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -209,7 +209,7 @@ body{
     .languages{
         margin-top: 3%;
         max-width: 100%;
-        height: 30vh;
+        height: 50vh;
         color: $PrimaryColor;
         padding: $padding_left_right;
         h1{
@@ -218,7 +218,8 @@ body{
             margin-bottom: 20px;
         }
         .languages_txt{
-            display: flex;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
             p{
                 padding:20px 40px 0px 0px;
                 font-size: $h1FontSize_2FHD;
@@ -290,3 +291,118 @@ body{
     }
 }
 
+@media only screen and(max-width:600px){
+    .about{
+        .intro{
+            #intro_txt{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-size:$h1FontSize_1Mobile;
+                width: 100%;
+            }
+            .intro_btn{
+                width:100%;
+                left: 50%;
+                display: flex;
+                flex-direction: row;
+                margin: auto;
+                justify-content: center;
+                align-items: center;
+            }
+        }
+        .presentation{
+            #first_txt{
+                z-index: 2;
+                text-shadow: 2px 2px 4px #000000;
+
+            }
+        }
+        .studies{
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            #studies_txt{
+                position:relative;
+                width: 80%;
+                font-size: $h1FontSize_2Mobile;
+                z-index: 1;
+            }
+            #studies_txt2{
+                width: 80%;
+                font-size: $h1FontSize_2Mobile;
+                z-index: 1;
+                bottom: -3%;
+            }
+            img{
+                display: flex;
+                width: 100%;
+                height: 28%;
+                justify-content: center;
+                align-items: center;
+                padding: 0px;
+            }
+        }
+        .learning{
+            #learning_txt1{
+                top: 9%;
+                font-size: $h1FontSize_2Mobile;
+            }
+            #learning_txt2{
+                bottom: 10%;
+                font-size: $h1FontSize_2Mobile;
+            }
+        }
+        .so_now{
+            height: 65vh;
+            .so_now_txt{
+                top:0;
+                width: 100%;
+                #left_line{
+                    height: 200px;
+                    width:10px;
+                }
+                h1{
+                    width: 65%;
+                    top:23%;
+                    font-size: $h1FontSize_2Mobile;
+                    margin-left: 70px;
+                }
+            }
+            iframe{
+                overflow: hidden;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                padding:0px;
+                bottom:-10%;
+            }
+        }
+        .skills{
+            width: 100%;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            background: black;
+        }
+        .languages{
+            height: 45vh;
+            text-align: center;
+            align-items: center;
+            justify-content: center;
+            .languages_txt{
+                font-family: $PrimaryFont;
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                font-size: $h1FontSize_2Mobile;
+                #lng{
+                    color:$EmphasizeColor;
+                }
+            }
+        }
+    }
+}
