--- a/src/components/About/Skills.module.css
+++ b/src/components/About/Skills.module.css
@@ -25,15 +25,31 @@
 }
 
 @media only screen and (max-width: 1367px) {
+  .skill_card {
+    top: -10%;
+  }
   .skill_card #skills_txt {
     font-size: 25px;
     padding: 20px 0px 10px 0px;
   }
   .skill_card p {
-    font-size: 18px;
+    font-size: 20px;
   }
   .skill_card i {
     font-size: 30px;
+    margin-top: 25px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .skill_card {
+    left: 0;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    flex-direction: column;
+    top: 10%;
   }
 }
 /*# sourceMappingURL=Skills.module.css.map */
