--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,1 +1,160 @@
-/* No CSS *//*# sourceMappingURL=Contact.module.css.map */
+body {
+  padding: 0;
+  border: 0;
+  margin: 0;
+}
+
+.contact {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+}
+
+.contact img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-filter: brightness(35%);
+          filter: brightness(35%);
+}
+
+.contact form {
+  border-radius: 20px;
+  padding: 40px;
+  position: absolute;
+  right: 0;
+  top: 20%;
+  margin: 0px 8% 0px 8%;
+  z-index: 2;
+  width: 30%;
+  height: 60vh;
+  background: #F2F4F7;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.contact form label {
+  margin-top: 30px;
+  margin-bottom: 10px;
+  font-family: "Lato", sans-serif;
+  font-weight: bolder;
+  font-size: 30px;
+}
+
+.contact form #simple_input {
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  height: 10%;
+  width: 95%;
+  font-size: 20px;
+  padding: 5px 0px 5px 10px;
+  border-radius: 10px;
+}
+
+.contact form #msg_input {
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  height: 20%;
+  width: 93%;
+  font-size: 15px;
+  resize: none;
+  border-radius: 10px;
+  padding: 10px;
+  font-family: "Lato", sans-serif;
+}
+
+.contact form #msg_input:focus {
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  border: 3px solid #009AFF;
+  outline: none;
+}
+
+.contact form input:focus {
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  border: 3px solid #009AFF;
+  outline: none;
+}
+
+.contact form button {
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  margin-top: 10%;
+  width: 35%;
+  height: 15%;
+  background: #009AFF;
+  color: #F2F4F7;
+  font-family: "Lato", sans-serif;
+  font-weight: bolder;
+  font-size: 25px;
+  border-radius: 10px;
+}
+
+.contact form button:hover {
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  background: black;
+}
+
+.contact .text {
+  position: absolute;
+  color: #F2F4F7;
+  top: 20%;
+  left: 0;
+  font-size: 35px;
+  margin-left: 4%;
+  width: 50%;
+}
+
+.contact .text .email {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-top: 14%;
+}
+
+.contact .text .email i {
+  margin-top: 8px;
+  margin-right: 20px;
+}
+
+.contact .social {
+  position: absolute;
+  bottom: 15%;
+  margin-left: 4%;
+  font-size: 35px;
+}
+
+.contact .social #social_txt {
+  font-size: 35px;
+  color: #F2F4F7;
+  margin-bottom: 20px;
+}
+
+.contact .social a i {
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  color: #F2F4F7;
+  margin-right: 20px;
+}
+
+.contact .social a:hover i {
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  color: #009AFF;
+}
+/*# sourceMappingURL=Contact.module.css.map */
