--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -16,4 +16,20 @@
     margin: 0px 20px 0px 20px;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .card {
+    left: 0;
+    height: 40vh;
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    border-radius: 0px;
+    border-bottom: 2px solid black;
+  }
+}
 /*# sourceMappingURL=Card.module.css.map */
