--- a/src/components/UI/Card.module.scss
+++ b/src/components/UI/Card.module.scss
@@ -18,3 +18,16 @@
         margin: 0px 20px 0px 20px;
     }
 }
+@media only screen and(max-width:600px){
+    .card{
+        left: 0;
+        height: 40vh;
+        width: 100%;
+        padding: 0px;
+        margin: 0px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        border-radius: 0px;
+        border-bottom: 2px solid black;
+    }
+}
